--- a/styleme.css
+++ b/styleme.css
@@ -31,7 +31,7 @@
     background-color: white;
     border-radius: 2px;
     cursor: pointer;
-    transition: background-color 0.15s, color 0.15s;
+    transition: background-color 0.5s, color 0.5s;
 
 
 }
@@ -95,4 +95,19 @@
     transform: scale(1.2);
 
 
+}
+
+.github{
+    border:none;
+    background-color:#238636;
+    color:white;
+    width:100px;
+    height:32px;
+    border-radius: 5px;
+    font-weight: bold;
+    font-size:18px;
+}
+
+.github:hover{
+    background-color:
 }
