--- a/textstyle.css
+++ b/textstyle.css
@@ -1,7 +1,7 @@
 .video-title{
-    font-family:Arial;
+    font-family:Cal Sans;
     font-weight:bold;
-    font-size:18px;
+    font-size:20px;
     width:300px;
     line-height:25px;
     margin-bottom:5px;
