--- a/Learning/textstyle.css
+++ b/Learning/textstyle.css
@@ -5,6 +5,7 @@
     width:300px;
     line-height:25px;
     margin-bottom:5px;
+    margin-top:0px;
     
 }    
 
@@ -34,7 +35,7 @@
     
     width:280px;
     line-height: 22px;
-    margin-bottom: 100px;
+    margin-bottom: 50px;
 
 }
 
@@ -55,6 +56,18 @@
 .underline:hover{
     text-decoration: underline;
     cursor:pointer;
+}
+
+.yt{
+    height:50px;
+    margin-left:-8px;
+    
+
+}
+
+.apple{
+    width:50px;
+    margin-left:-12px;
 }
 
 
