--- a/Youtube/youtube.css
+++ b/Youtube/youtube.css
@@ -1,3 +1,5 @@
+
+
 .thumbnail {
     width: 300px;
     display:block;
@@ -7,19 +9,69 @@
     
 }
 
-.searchbox{
-    font-size:22px;
-    margin-left:30px;
-    width:500px;
-    padding: 12px 20px;
+.search-bar{
+    display:block;
+
    
-    font-family: Arial, sans-serif;
-    border:1px solid #ccc;
-    outline: none;
-    box-shadow: 1px 2px 5px rgba(0,0,0,0.1);
-    
-    border-radius:50px;
-    border-width: 1px;
-    
     
 }
+
+.video-preview{
+    width:300px;
+    display:inline-block;
+    vertical-align:top;
+    margin-right:15px;
+    
+}
+
+.channel-pic{
+    display:inline-block;
+    width:50px;
+    vertical-align:top;
+}
+
+.video-info{
+    display:inline-block;
+    width:200px
+
+}
+
+.channel{
+    width:80%;
+    border-radius:100%;
+}
+
+
+.video-title{
+    margin-top:0px;
+    font-size:14x;
+    font-weight: 700;
+    line-height:20px;
+    margin-bottom:15px;
+   
+    
+}
+
+.thubmnail-row{
+    margin-bottom:12px;
+}
+
+p{
+    font-family: Roboto, Arial;
+    margin-top:0px;
+    margin-bottom:0px;
+}
+
+.video-author{
+    font-size:16px;
+    color: rgb(96,96,96);
+    margin-bottom:6px;
+}
+
+.video-stats{
+    font-size: 16px;
+    color: rgb(96, 96, 96)
+}
+
+
+
