--- a/Youtube/youtube.css
+++ b/Youtube/youtube.css
@@ -28,48 +28,52 @@
     display:inline-block;
     width:50px;
     vertical-align:top;
+    margin-right:0px
 }
 
 .video-info{
+    
     display:inline-block;
-    width:200px
+    width:240px
 
 }
 
 .channel{
     width:80%;
     border-radius:100%;
+    margin-top:0px
 }
 
 
 .video-title{
     margin-top:0px;
     font-size:14x;
-    font-weight: 700;
+    font-weight: 500;
     line-height:20px;
     margin-bottom:15px;
+    
    
     
 }
 
 .thubmnail-row{
-    margin-bottom:12px;
+    margin-bottom:15px;
 }
 
 p{
-    font-family: Roboto, Arial;
+    font-family: Roboto;
     margin-top:0px;
     margin-bottom:0px;
 }
 
 .video-author{
-    font-size:16px;
+    font-size:12px;
     color: rgb(96,96,96);
     margin-bottom:6px;
 }
 
 .video-stats{
-    font-size: 16px;
+    font-size: 12px;
     color: rgb(96, 96, 96)
 }
 
