--- a/Youtube/youtube.css
+++ b/Youtube/youtube.css
@@ -1,42 +1,18 @@
 
 
 .thumbnail {
-    width: 300px;
-    display:block;
-    
-    
-    
+    width:100%;
     
 }
 
-.search-bar{
-    display:block;
 
-   
-    
+
+
+.video-info-grid{
+    display:grid;
+    grid-template-columns:50px 1fr;
 }
 
-.video-preview{
-    width:300px;
-    display:inline-block;
-    vertical-align:top;
-    margin-right:15px;
-    
-}
-
-.channel-pic{
-    display:inline-block;
-    width:50px;
-    vertical-align:top;
-    margin-right:0px
-}
-
-.video-info{
-    
-    display:inline-block;
-    width:240px
-
-}
 
 .channel{
     width:80%;
@@ -76,6 +52,18 @@ p{
     font-size: 12px;
     color: rgb(96, 96, 96)
 }
+
+
+
+.video-grid{
+    display:grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    column-gap:16px;
+    row-gap:40px;
+}
+
+
+
 
 
 
