--- a/Youtube/styles/general.css
+++ b/Youtube/styles/general.css
@@ -3,3 +3,17 @@ p {
     margin-top: 0px;
     margin-bottom: 0px;
 }
+
+
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    margin: 0;
+    font-family: Roboto, Arial, sans-serif;
+    /* to keep your vibes */
+}
