--- a/Youtube/styles/header.css
+++ b/Youtube/styles/header.css
@@ -1,21 +1,26 @@
 .left-section{
-    background-color:lightblue;
-    width:150px;
+    display:flex;   
+    align-items:center;
 }
 
 .right-section{
-    background-color: lightblue;
-    width:200px;
+    width:180px;
+    display:flex;
+    align-items:center;
+    justify-content:space-between;
+    margin-right:22px;
+    flex-shrink:0;
     
     
 }
 
 .middle-section {
-    background-color: pink;
     flex:1;
     margin-left:70px;
     margin-right:35px;
     max-width:500px;
+    display:flex;
+    align-items:center;
     
     
 }
@@ -27,3 +32,92 @@
 
     justify-content:space-between;
 }
+
+.hamburger{
+    height:25px;
+    margin-left:24px;
+    margin-right:20px;
+
+}
+
+.yt-logo{
+    height:20px;
+
+}
+
+.search-button{
+    height:40px;
+    width:66px;
+    background-color:rgb(247,247,247);
+    border-width:1px;
+    border-style:solid;
+    border-color:rgb(204,204,204);
+    margin-left:-1px;
+    margin-right:10px;
+}
+
+.voice-search-button{
+    height:40px;
+    width:40px;
+    border-radius: 100%;
+    border:none;
+    background-color:rgb(248,248,248);
+}
+
+.search-bar{
+    flex:1;
+    height:40px;
+    font-size:16px;
+    border-width:1px;
+    border-style:solid;
+    border-color:rgb(204, 204, 204);
+    border-radius:2px;
+    box-shadow: inset 1px 2px 3px rgba(0,0 ,0,0.05);
+    width:0;
+}
+
+
+.search-bar::placeholder {
+    font-family:Roboto, Arial;
+    font-size:16px;
+    padding-left:10px;
+}
+
+.search-icon{
+    height:25px;
+    margin-top:4px;
+}
+
+.voice-search-icon{
+    height:24px;
+    margin-top:4px;
+}
+
+
+.upload-icon{
+    height:25px;
+
+}
+
+.apps-icon {
+    height:25px;
+
+
+
+}
+
+.notify-icon {
+    height:25px;
+
+
+
+}
+.profile-icon {
+    height:33px;
+    border-radius:100%;
+
+
+
+
+}
+
