--- a/Youtube/styles/general.css
+++ b/Youtube/styles/general.css
@@ -16,4 +16,8 @@ body {
     margin: 0;
     font-family: Roboto, Arial, sans-serif;
     /* to keep your vibes */
+
+    padding-bottom:1000px;
+    padding-top:80px;
+    padding-left:80px;
 }
