--- a/Youtube/styles/youtube.css
+++ b/Youtube/styles/youtube.css
@@ -34,6 +34,7 @@
 
 .thubmnail-row{
     margin-bottom:15px;
+    position:relative;
 }
 
 
@@ -57,6 +58,23 @@
     column-gap:16px;
     row-gap:40px;
     
+}
+
+
+.timeline{
+    background-color:black;
+    color:white;
+    position:absolute;
+    right:5px;
+    bottom:10px;
+    font-family: Roboto, Arial;
+    font-size:12px;
+    font-weight:500;
+    padding-left:4px;
+    padding-right: 4px;
+    padding-top: 4px;
+    padding-bottom: 4px;
+    border-radius:2px;
 }
 
 
