--- a/Youtube/styles/youtube.css
+++ b/Youtube/styles/youtube.css
@@ -79,7 +79,24 @@
 
 
 
+.notify-count{
+    position:relative;
+}
 
+.not-count{
+    position:absolute;
+    top:-2px;
+    right:-5px;
+    background-color:rgb(200, 0, 0);
+    color:white;
+    font-family: Roboto, Arial;
+    font-size:10px;
+    padding-left:5px;
+    padding-right: 5px;
+    padding-top: 1px;
+    padding-bottom: 2px;
+    border-radius:10px;;
+}
 
 
 
