--- a/Youtube/styles/general.css
+++ b/Youtube/styles/general.css
@@ -17,7 +17,9 @@ body {
     font-family: Roboto, Arial, sans-serif;
     /* to keep your vibes */
 
-    padding-bottom:1000px;
+    padding-bottom:24px;
     padding-top:80px;
-    padding-left:80px;
+    padding-left:96px;
+    padding-right:24px;
+    background-color:rgb(248,248,248) ;
 }
