--- a/Youtube/styles/header.css
+++ b/Youtube/styles/header.css
@@ -34,7 +34,7 @@
     border-bottom-width:1px;
     border-bottom-style:solid;
     border-color:rgb(228, 228, 228);
-    z-index:1;
+    z-index:100;
     backdrop-filter: blur(10px);
 
 
@@ -66,6 +66,8 @@
     border-color:rgb(204,204,204);
     margin-left:-1px;
     margin-right:10px;
+    position:relative;
+    transition:background-color 0.4s;
 }
 
 .voice-search-button{
@@ -74,6 +76,7 @@
     border-radius: 100%;
     border:none;
     background-color:rgb(248,248,248);
+    
 }
 
 .search-bar{
@@ -97,12 +100,12 @@
 
 .search-icon{
     height:25px;
-    margin-top:4px;
+    
 }
 
 .voice-search-icon{
     height:24px;
-    margin-top:4px;
+    
 }
 
 
@@ -113,6 +116,7 @@
 
 .apps-icon {
     height:25px;
+    margin-top:5px;
 
 
 
@@ -120,16 +124,80 @@
 
 .notify-icon {
     height:25px;
+    margin-top:6px;
 
 
 
 }
 .profile-icon {
-    height:33px;
+    height:30px;
     border-radius:100%;
+    margin-bottom:3px;
 
 
 
 
+}
+
+.not-count{
+    margin-top:8px;
+    margin-right:2px;
+}
+
+.search-button .tooltip ,
+.voice-search-button .tooltip,
+.upload-icon-container .tooltip,
+.apps-icon-container .tooltip,
+.notify-count .tooltip {
+    position:absolute;
+    background-color: rgb(129, 129, 129);
+    color:white;
+    padding-top:8px;
+    padding-bottom:8px;
+    padding-right:12px;
+    padding-left:12px;
+    border-radius:20px;
+    font-family:Roboto, Arial;
+    bottom:-40px;
+    opacity:0;
+    transition:opacity 0.4s;
+    white-space:nowrap;
+
+    
+}
+
+.search-button:hover .tooltip{
+    opacity:1;
+}
+
+.voice-search-button:hover .tooltip{
+    opacity:1;
+}
+
+.upload-icon-container:hover .tooltip {
+    opacity: 1;
+}
+
+.apps-icon-container:hover .tooltip{
+    opacity:1;
+}
+
+.notify-count:hover .tooltip{
+    opacity:1;
+}
+
+.search-button:hover{
+    background-color:rgb(206, 205, 205)
+}
+
+.search-button,
+.voice-search-button,
+.upload-icon-container,
+.apps-icon-container,
+.notify-count {
+    position:relative;
+    display:flex;
+    justify-content:center;
+    align-items:center;
 }
 
