--- a/Youtube/styles/youtube.css
+++ b/Youtube/styles/youtube.css
@@ -23,17 +23,17 @@
 
 .video-title{
     margin-top:0px;
-    font-size:14x;
+    font-size:14px;
     font-weight: 500;
     line-height:20px;
-    margin-bottom:15px;
+    margin-bottom:10px;
     
    
     
 }
 
 .thubmnail-row{
-    margin-bottom:15px;
+    margin-bottom:10px;
     position:relative;
 }
 
@@ -42,7 +42,7 @@
 .video-author{
     font-size:12px;
     color: rgb(96,96,96);
-    margin-bottom:6px;
+    margin-bottom:4px;
 }
 
 .video-stats{
@@ -54,9 +54,10 @@
 
 .video-grid{
     display:grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
     column-gap:16px;
     row-gap:40px;
+    
     
 }
 
@@ -96,6 +97,10 @@
     padding-top: 1px;
     padding-bottom: 2px;
     border-radius:10px;;
+}
+
+.channel-pic{
+    width:46px;
 }
 
 
