--- a/Youtube/styles/youtube.css
+++ b/Youtube/styles/youtube.css
@@ -61,6 +61,18 @@
     
 }
 
+@media (max-width:900px){
+    .video-grid{
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+}
+
+@media (max-width:700px) {
+    .video-grid {
+        grid-template-columns: 1fr 1fr;
+    }
+}
+
 
 .timeline{
     background-color:black;
