--- a/Youtube/styles/general.css
+++ b/Youtube/styles/general.css
@@ -1,5 +1,5 @@
 p {
-    font-family: Roboto;
+    font-family: Roboto,Arial,sans-serif;
     margin-top: 0px;
     margin-bottom: 0px;
 }
@@ -18,8 +18,8 @@ body {
     /* to keep your vibes */
 
     padding-bottom:24px;
-    padding-top:80px;
+    padding-top:55px;
     padding-left:96px;
     padding-right:24px;
-    background-color:rgb(248,248,248) ;
+    /* background-color:rgb(248,248,248) ; */
 }
