--- a/Youtube/styles/header.css
+++ b/Youtube/styles/header.css
@@ -16,11 +16,12 @@
 
 .middle-section {
     flex:1;
-    margin-left:70px;
+    margin-left:20px;
     margin-right:35px;
-    max-width:500px;
+    max-width:750px;
     display:flex;
     align-items:center;
+    padding-left:85px;
     
     
 }
@@ -28,13 +29,10 @@
 .header{
     display:flex;
     flex-direction:row;
+    
     height:55px;
     background-color: rgba(255, 255, 255, 0.8);
-        /* translucent white */
-    border-bottom-width:1px;
-    border-bottom-style:solid;
-    border-color:rgb(228, 228, 228);
-    z-index:100;
+    z-index:300;
     backdrop-filter: blur(10px);
 
 
@@ -44,6 +42,8 @@
     left:0;
     right:0;
 }
+
+
 
 .hamburger{
     height:25px;
@@ -98,7 +98,7 @@
 .search-bar::placeholder {
     font-family:Roboto, Arial;
     font-size:16px;
-    padding-left:10px;
+    padding-left:16px;
 }
 
 .search-icon{
@@ -205,3 +205,21 @@
     align-items:center;
 }
 
+.yt-license{
+    position:relative;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    
+}
+
+.in{
+    position:absolute;
+    font-size:10px;
+    top:-8px;
+    right:-12px;
+    font-family:Roboto, Arial;
+    color:rgb(96,96,96);
+
+    
+}
