--- a/Youtube/styles/youtube.css
+++ b/Youtube/styles/youtube.css
@@ -2,6 +2,7 @@
 
 .thumbnail {
     width:100%;
+    border-radius:10px;
     
 }
 
@@ -23,7 +24,7 @@
 
 .video-title{
     margin-top:0px;
-    font-size:14px;
+    font-size:16px;
     font-weight: 500;
     line-height:20px;
     margin-bottom:10px;
@@ -40,13 +41,13 @@
 
 
 .video-author{
-    font-size:12px;
+    font-size:14px;
     color: rgb(96,96,96);
     margin-bottom:4px;
 }
 
 .video-stats{
-    font-size: 12px;
+    font-size: 14px;
     color: rgb(96, 96, 96)
 }
 
@@ -54,16 +55,16 @@
 
 .video-grid{
     display:grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
     column-gap:16px;
     row-gap:40px;
     
     
 }
 
-@media (max-width:900px){
+@media (max-width:800px){
     .video-grid{
-        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
     }
 }
 
